--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,12 +7,20 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{trialcost,
+author="{US FDA}",
+title="{Human Subject Protection; Acceptance of Data from Clinical Studies for Medical Devices;
+Proposed Rule}",
+journal={Docket No. FDA- 2013-N-0080},
+year={2013}
+}
 
  @article{regar_tech,
 author={Z. Jiang and H. Abbas and PJ. Mosterman and R. Mangharam},
 title="{Tech Report: Abstraction-Tree For Closed-loop Model Checking of Medical Devices}",
 journal={http://repository.upenn.edu/mlab$\_$papers/73},
 year={2015}
+}
 
 @article{TECS,
  author = {Pajic, Miroslav and Jiang, Zhihao and Lee, Insup and Sokolsky, Oleg and Mangharam, Rahul},
